# sdk-python

./: pyproject.toml
docs/: package.json  pnpm-lock.yaml  source.config.ts  with_user.md
docs/content/docs/ru/: index.mdx  test.mdx
docs/content/docs/ru/(api)/: index.mdx
docs/content/en/: authorization.mdx  installation.mdx  meta.json
docs/content/ru/: authorization.mdx  installation.mdx  meta.json
docs/content/ru/functions/: composition.mdx  creating.mdx  index.mdx  meta.json
docs/scripts/: generate-sdk-docs.mjs
docs/src/: mdx-components.tsx  middleware.ts
docs/src/app/: page.tsx
docs/src/app/[lang]/: layout.tsx
docs/src/app/[lang]/(home)/: layout.tsx  page.tsx
docs/src/app/[lang]/docs/: layout.tsx
docs/src/app/[lang]/docs/[[...slug]]/: page.tsx
docs/src/app/api/search/: route.ts
docs/src/app/og/docs/[...slug]/: route.tsx
docs/src/lib/: i18n.ts  layout.shared.tsx  source.ts
src/malevich_sdk/: __init__.py  exc.py  utils.py
src/malevich_sdk/cli/: README.md  __init__.py
src/malevich_sdk/cli/commands/: __init__.py  creds.py  example.py
src/malevich_sdk/core_api/: connection.py  credentials.py  exc.py  operation.py  pipeline.py  run.py  tasks.py
src/malevich_sdk/modelling/: arguments.py  file.py  flow.py  function.py  group.py  image.py
src/malevich_sdk/usp/: README.md  __init__.py  credstore.py  uvenv.py
