[project]
name = "malevich-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aleksandr Lobanov", email = "aleksandr.lobanov.official@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "malevich-app",
    "malevich-coretools>=0.3.68",
    "pyhumps>=3.8.0",
]

[project.scripts]
malevich-sdk = "malevich_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
